fix: Text truncation issue
Closes: #381

--- a/app/assets/stylesheets/site/_global.sass
+++ b/app/assets/stylesheets/site/_global.sass
@@ -110,6 +110,3 @@ table td.shrink
   padding: 0.5rem
   font-size: 1rem
   background-color: #ddd
-
-.more-content span
-  display: none
